# Shakki

./: .gitignore  .pylintrc  README.md  TODO.md  interactive_console_output.xml  pyproject.toml  stupid_ai.py
dokumentaatio/: käyttöohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: loppuraportti.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: MovesLibrary.py  board.py  get_legal_moves.py  index.py  is_king_threatened.py  max_turn.py  min_turn.py  minimax.py  moves.py  point_evaluation.py  test_board.py  trial_board.py
src/minimax/: max_turn.py  min_turn.py  minimax.py  point_evaluation.py
src/movement_of_pieces/: bishop.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/tests/: bishop_movement_test.py  checkmate_test.py  is_king_threatened_test.py  king_movement_test.py  knight_movement_test.py  make_move.robot  new_list_of_king_protection_test.py  pawn_movement_test.py  queen_movement_test.py  rook_movement_test.py
tiraconfig/: runcommand  setup.sh
